# adventofcode2022

./: Cargo.toml
src/: lib.rs  load.rs  main.rs
src/solutions/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
