[package]
name = "avent2022"
version = "0.1.0"
edition = "2021"
authors = ["Laurent Erreca <erreca.laurent@gmail.com>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "*"
clap = "=3.0.0-beta.5"
itertools = "*"
difference = "2.0"

[profile.dev]
opt-level = 0
overflow-checks = true
debug = 2

[features]
path = []

# [lib]
# name = "solutions"
# path = "src/solutions/mod.rs"
